# XRM

./: Build.html  CMakeLists.txt  License.txt  Prerequisites.html  README.rst  Test.html  boost.sh  build.sh  cli.html  download.html  examples.html  genindex.html  index.html  lib.html  notice.html  objects.inv  rel.html  search.html  searchindex.js  setup.csh  setup.sh  workflow.html  xrm.ini
2020.1/: Build.html  Prerequisites.html  index.html  notice.html  rel.html  search.html  workflow.html
2020.1/rst_libapi/: enum_xrmCuType.html  enum_xrmLogLevelType.html  struct_xrmAllocationQueryInfo.html  struct_xrmCuGroupProperty.html  struct_xrmCuListProperty.html  struct_xrmCuListResource.html  struct_xrmCuPoolProperty.html  struct_xrmCuPoolResource.html  struct_xrmCuProperty.html  struct_xrmCuResource.html  struct_xrmCuStat.html  struct_xrmPluginData.html  struct_xrmPluginFuncParam.html  struct_xrmUdfCuGroupProperty.html  struct_xrmUdfCuProperty.html
2020.2/: Prerequisites.html  cli.html  examples.html  index.html  notice.html  objects.inv  searchindex.js
2020.2/rst_libapi/: enum_xrmLogLevelType.html  struct_xrmAllocationQueryInfo.html  struct_xrmCuGroupProperty.html  struct_xrmCuGroupResource.html  struct_xrmCuListProperty.html  struct_xrmCuPoolResource.html  struct_xrmCuResource.html  struct_xrmCuStat.html  struct_xrmUdfCuGroupProperty.html
2021.1/: Prerequisites.html  Test.html  genindex.html  index.html  objects.inv  rel.html  search.html  searchindex.js
2021.1/_static/: documentation_options.js
2021.1/rst_libapi/: struct_xrmCuListProperty.html  struct_xrmCuPoolProperty.html  struct_xrmPluginData.html  struct_xrmPluginFuncParam.html
2021.2/: index.html  lib.html  objects.inv  rel.html  search.html
2021.2/rst_libapi/: enum_xrmCuType.html  enum_xrmLogLevelType.html  struct_xrmAllocationQueryInfo.html  struct_xrmCuGroupProperty.html  struct_xrmCuGroupPropertyV2.html  struct_xrmCuGroupResource.html  struct_xrmCuListProperty.html  struct_xrmCuListPropertyV2.html  struct_xrmCuListResource.html  struct_xrmCuPoolProperty.html  struct_xrmCuPoolPropertyV2.html  struct_xrmCuPoolResource.html  (+16 more)
2022.1/: Build.html  examples.html  index.html  lib.html  notice.html
2022.2/: Build.html  download.html  index.html  notice.html  objects.inv  search.html  searchindex.js
2023.1/: download.html  genindex.html  index.html  lib.html  workflow.html
CMake/: findpackage.cmake  package.cmake  pkgconfig.cmake  service.cmake  version.cmake
_static/: documentation_options.js
docs/: .gitignore  Build.html  Build.rst  Doxyfile_common  Doxyfile_libapi  Makefile  Makefile.sphinx  Prerequisites.rst  README.md  Test.html  Test.rst  cli.html  cli.rst  conf.py  download.rst  examples.html  examples.rst  index.rst  lib.html  lib.rst  notice.rst  objects.inv  rel.html  rel.rst  search.html  searchindex.js  workflow.html  workflow.rst
rst_libapi/: enum_xrmCuType.html  enum_xrmLogLevelType.html  struct_xrmAllocationQueryInfo.html  struct_xrmAllocationQueryInfoV2.html  struct_xrmCuGroupProperty.html  struct_xrmCuGroupPropertyV2.html  struct_xrmCuGroupResource.html  struct_xrmCuGroupResourceV2.html  struct_xrmCuListProperty.html  struct_xrmCuListPropertyV2.html  struct_xrmCuListResInforV2.html  struct_xrmCuListResource.html  struct_xrmCuListResourceV2.html  struct_xrmCuPoolProperty.html  struct_xrmCuPoolPropertyV2.html  struct_xrmCuPoolResInforV2.html  struct_xrmCuPoolResource.html  struct_xrmCuPoolResourceV2.html  struct_xrmCuProperty.html  struct_xrmCuPropertyV2.html  struct_xrmCuResInforV2.html  struct_xrmCuResource.html  struct_xrmCuResourceV2.html  struct_xrmCuStat.html  struct_xrmDeviceIdListPropertyV2.html  struct_xrmDeviceListResInforV2.html  struct_xrmPluginData.html  struct_xrmPluginFuncParam.html  struct_xrmReservationQueryInfoV2.html  struct_xrmUdfCuGroupProperty.html  struct_xrmUdfCuGroupPropertyV2.html  struct_xrmUdfCuListProperty.html  struct_xrmUdfCuListPropertyV2.html  struct_xrmUdfCuProperty.html  struct_xrmUdfCuPropertyV2.html
test/: disable_devices_cmd.json  enable_devices_cmd.json  list_cmd.json  list_onedevice_cmd.json  load_all_devices_cmd.json  load_devices_cmd.json  load_xrm_plugins_cmd.json  unload_all_devices_cmd.json  unload_xrm_plugins_cmd.json
tools/: example_add_key_values_to_xclbin.sh  restart_xrmd.sh  start_xrmd.sh  stop_xrmd.sh  xrmdeps.sh
(+120 files in other folders)
